@@ -17,12 +17,11 @@
 
 package org.photonvision.vision.pipeline;
 
+import edu.wpi.first.math.Pair;
 import edu.wpi.first.math.util.Units;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.apache.commons.lang3.tuple.Pair;
 import org.opencv.core.Mat;
 import org.opencv.core.Point;
 import org.photonvision.common.dataflow.DataChangeService;
@@ -83,7 +82,7 @@ public class Calibrate3dPipeline
 
     @Override
     protected void setPipeParamsImpl() {
-        FindBoardCornersPipe.FindCornersPipeParams findCornersPipeParams =
+        findBoardCornersPipe.setParams(
                 new FindBoardCornersPipe.FindCornersPipeParams(
                         settings.boardHeight,
                         settings.boardWidth,
@@ -92,13 +91,11 @@ public class Calibrate3dPipeline
                         settings.gridSize,
                         settings.markerSize,
                         settings.streamingFrameDivisor,
-                        settings.useOldPattern);
-        findBoardCornersPipe.setParams(findCornersPipeParams);
+                        settings.useOldPattern));
 
-        Calibrate3dPipe.CalibratePipeParams calibratePipeParams =
+        calibrate3dPipe.setParams(
                 new Calibrate3dPipe.CalibratePipeParams(
-                        settings.boardHeight, settings.boardWidth, settings.gridSize, settings.useMrCal);
-        calibrate3dPipe.setParams(calibratePipeParams);
+                        settings.boardHeight, settings.boardWidth, settings.gridSize, settings.useMrCal));
     }
 
     @Override
@@ -125,9 +122,7 @@ public class Calibrate3dPipeline
         var outputColorCVMat = new CVMat();
         inputColorMat.copyTo(outputColorCVMat.getMat());
 
-        FindBoardCornersPipeResult findBoardResult;
-
-        findBoardResult =
+        FindBoardCornersPipeResult findBoardResult =
                 findBoardCornersPipe.run(Pair.of(inputColorMat, outputColorCVMat.getMat())).output;
 
         if (takeSnapshot) {
@@ -166,9 +161,7 @@ public class Calibrate3dPipeline
     }
 
     List<List<Point>> getCornersList() {
-        return foundCornersList.stream()
-                .map(it -> it.imagePoints.toList())
-                .collect(Collectors.toList());
+        return foundCornersList.stream().map(it -> it.imagePoints.toList()).toList();
     }
 
     public boolean hasEnough() {
